--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-animate": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "ng-currency": "~0.8.11"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
