--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "workAngelApp",
+  "moduleName": "app",
   "overrides": {
     "bootstrap": {
       "main": [
