--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
